--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+
+  --color-primary: 0, 120, 212;
+  --color-muted: 65, 65, 65 ;
+
 }
 
 @media (prefers-color-scheme: dark) {
